1.0.1
Minor text additions to about box when no type specified.
'Save' on type=notepad now doesn't close dialog.
Added --cdto=ARG to change dir to ARG before reading from stdin, mainly to set basefolder for images etc for richtext when reading from stdin.
Can now read from stdin for type=richtext.

1.0.0
Typo fixes in examples.
Addes 'save' type to prefsdialog type.
Added --type=openfolder.
Fixed combo boxes in prefsdialog being to large.
Fixed position of popup menus in traymenu when sytray not at top of screen etc.
Rearranged traymenu context menu.
Added "/usr/share/pixmaps" to traymenu menu items icons search path( qt 5 does not seem to look there by default).
Added 'YadQt Help' item to context tray menu menu.
Moved traymenu menu items to left click menu.
Moved traymenu quit/reload to context menu ( right click ).
Added --remember option to remember last used traymenu menuitem ( see help ).
Fixed typos in help pages.
Fixed example.
Added screenshooter.sh to examples.
Tailbox now accepts a file name ( --default=/path/to/file ).
Fixed tail box hogging cpu.
Fixed richtext box hogging cpu.
Added reload option for traymenu.
Added run first option fo traymenu.
Added message to traymenu when selecting menu item, ( use --timeout=NNN, where NNN is timout in mS, 0=no message ). 
Added type=help for builtin help dialog.
Tray menu icons can be either symbolic name or full path.
Added tramenu examples.
Added --type=traymenu.
Yadqt with no args now displays about box for yadqt.
Default is now qt6 ( use qt5 with --enable-qt5 to configure for qt5 build ).

0.1.1
Set buttons in prefs dialog via the --buttons switch, defaults to OK.
Changed buttons in prefs dialog to "Apply, Ok, Cancel" to allow live update of prefs ( see example bashprefslive.sh.
Added spin buttons to pref dialog.
Added tabbed prefs dialog.
Auto set window title in notebook/richtext/textfile if not specified on cli.
More sensible default sizes for dialogs if width/height not set on cli.